metadata1/unpackaged/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>ATI_Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job Name</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Access_Notes__c</fullName>
        <label>Access Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open Access</fullName>
                </value>
                <value>
                    <fullName>Badge</fullName>
                </value>
                <value>
                    <fullName>Key Assist</fullName>
                </value>
                <value>
                    <fullName>Key Pad</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquire_Work_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acquire Work Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addiotional_Email_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup an user to send additional email notification.</inlineHelpText>
        <label>Additional Email Recipient 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Email_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup an user to send additional email notification.</inlineHelpText>
        <label>Additional Email Recipient 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anteroom__c</fullName>
        <label>Anteroom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approximate_Square_Footage__c</fullName>
        <label>Approximate Square Footage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assign a supervisor or field technician.</inlineHelpText>
        <label>Assigned To (Field Tech)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Ops - Supervisor</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Force.com - One App User</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barrier_Framing_Qty__c</fullName>
        <label>Barrier Framing Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barrier_Framing__c</fullName>
        <label>Barrier Framing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zip Poles</fullName>
                </value>
                <value>
                    <fullName>Steel Track</fullName>
                </value>
                <value>
                    <fullName>Steel Stud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barrier_Linear_Feet__c</fullName>
        <label>Barrier Linear Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barrier_Type__c</fullName>
        <label>Barrier Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poly</fullName>
                </value>
                <value>
                    <fullName>FR Poly</fullName>
                </value>
                <value>
                    <fullName>FR Coroplast</fullName>
                </value>
                <value>
                    <fullName>Drywall</fullName>
                </value>
                <value>
                    <fullName>FR Plywood</fullName>
                </value>
                <value>
                    <fullName>ATI Panel System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barrier_Walls__c</fullName>
        <label>Barrier Walls</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carbon_Filter__c</fullName>
        <label>Carbon Filter - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <formula>ATI_Job__r.Project_Site_Contact_Name__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Amount__c</fullName>
        <label>Check Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City_State_ZIP__c</fullName>
        <label>City, State, ZIP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clearance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clearance_Type__c</fullName>
        <label>Clearance Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Debris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Debris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Company__c</fullName>
        <label>Consultant - Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Contact_Person__c</fullName>
        <label>Consultant - Contact Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Contact_Phone__c</fullName>
        <label>Consultant - Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contractor_Company__c</fullName>
        <label>Contractor - Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Contact_Phone__c</fullName>
        <label>Contractor - Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <label>Contractor - Contact Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covering__c</fullName>
        <label>Covering</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical Barriers</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Wall</fullName>
                </value>
                <value>
                    <fullName>Ceiling</fullName>
                </value>
                <value>
                    <fullName>Med. Equip</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Wind. Cov.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crew_Members_Female__c</fullName>
        <label>Crew Members - Female</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crew_Members_Male__c</fullName>
        <label>Crew Members - Male</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Critical_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_End_Time__c</fullName>
        <label>Daily End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Start_Time__c</fullName>
        <label>Daily Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Approved__c</fullName>
        <label>Date/Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Submitted_for_Approval__c</fullName>
        <label>Date/Time Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demolition_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demolition Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division formula field pulled on from Job record</description>
        <formula>TEXT(ATI_Job__r.Division__c)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dry_Decon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dry Decon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPA_Number__c</fullName>
        <label>EPA Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Supply__c</fullName>
        <label>Electrical - Supply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GFCI Required</fullName>
                </value>
                <value>
                    <fullName>Spider Box</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exhaust__c</fullName>
        <label>Exhaust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100% Outside</fullName>
                </value>
                <value>
                    <fullName>Adjacent Area</fullName>
                </value>
                <value>
                    <fullName>Recirculate</fullName>
                </value>
                <value>
                    <fullName>Exhaust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Contact_Phone__c</fullName>
        <label>Facility Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Facility_Contact__c</fullName>
        <label>Facility Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Systems_Seal__c</fullName>
        <label>Fire Systems - Seal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Smoke Alarm</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fire_Systems_Supply_Fire_Ext__c</fullName>
        <label>Fire Systems - Supply Fire Ext.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flex_Duct_Size__c</fullName>
        <label>Flex Duct Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_Duct__c</fullName>
        <label>Flex Duct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flex Duct</fullName>
                </value>
                <value>
                    <fullName>Lay Flat</fullName>
                </value>
                <value>
                    <fullName>ATI Duct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floor_Level__c</fullName>
        <label>Floor/Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Plans_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floor Plans Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Phone__c</fullName>
        <label>General Contractor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Contractor__c</fullName>
        <label>General Contractor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generator_Company__c</fullName>
        <label>Generator Company</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generator_Contact__c</fullName>
        <label>Generator Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_Registers_Redirect__c</fullName>
        <label>HVAC Registers - Redirect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HVAC_Registers_Seal__c</fullName>
        <label>HVAC Registers - Seal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hazardous_Waste_Debris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Waste Debris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>ATI_Job__r.Home_Phone__c</formula>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Residence_Number_of_Bedrooms__c</fullName>
        <label>Home Residence - Number of Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_House__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-House</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Independent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installation_Man_Hours__c</fullName>
        <label>Installation Man Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance - Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Contact_Person__c</fullName>
        <label>Insurance - Contact Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Contact_Phone__c</fullName>
        <label>Insurance - Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Job_Address__c</fullName>
        <description>Formula field pulling on Project Site Address Link from Job record</description>
        <formula>ATI_Job__r.Project_Site_Address_Link__c</formula>
        <label>Job Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>Job Name field (short description without Job Number) pulled from Job/Opportunity record in order for Salesforce1 users to have access, since they are unable to view the Job/Opportunity lookup field due to license restrictions.</description>
        <formula>ATI_Job__r.Job_Name__c</formula>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number2__c</fullName>
        <formula>ATI_Job__r.Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Box_Code__c</fullName>
        <label>Lock Box Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manometer_Qty__c</fullName>
        <label>Manometer Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manometer_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manometer Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_1_Location__c</fullName>
        <label>Material 1 - Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_1_Quantity__c</fullName>
        <label>Material 1 - Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_1_Type__c</fullName>
        <label>Material 1 - Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_2_Location__c</fullName>
        <label>Material 2 - Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_2_Quantity__c</fullName>
        <label>Material 2 - Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_2_Type__c</fullName>
        <label>Material 2 - Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_3_Location__c</fullName>
        <label>Material 3 - Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_3_Quantity__c</fullName>
        <label>Material 3 - Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_3_Type__c</fullName>
        <label>Material 3 - Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Requisition_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material Requisition Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_Man_Hours__c</fullName>
        <label>Monitoring Man Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Phases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Phases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negative_Air_1200__c</fullName>
        <label>Negative Air 1200 - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negative_Air_1800__c</fullName>
        <label>Negative Air 1800 - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negative_Air_2000__c</fullName>
        <label>Negative Air 2000 - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Hazardous_Waste_Debris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Hazardous Waste Debris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if a notification is required, and fill-in the notification information in the fields below.</inlineHelpText>
        <label>Notification Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Bags__c</fullName>
        <label>Number of Bags</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Dumpsters__c</fullName>
        <label>Number of Dumpsters</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Stories_Flights_of_Stairs__c</fullName>
        <label>Number of Stories / Flights of Stairs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Work_Days_to_Complete__c</fullName>
        <formula>End_Date__c  -  Start_Date__c  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Work Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Work_Days_to_Complete_del__c</fullName>
        <label>Number of Work Days to Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Workers__c</fullName>
        <label>Number of Workers</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office2__c</fullName>
        <description>Formula field pulling on Office from Job record</description>
        <formula>ATI_Job__r.Office2__r.Name</formula>
        <label>Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Office object</description>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Running_Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the office whose operations team will be running this job. The work order will be sent to the appropriate person at this office for approval.</inlineHelpText>
        <label>Office Running Job</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Work Orders (Office Running Job)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Site_Contact_Name__c</fullName>
        <label>On-Site Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Site_Contact_Phone__c</fullName>
        <label>On-Site Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>On_Site_Contact_Type__c</fullName>
        <inlineHelpText>Owner, Tenant, etc.</inlineHelpText>
        <label>On-Site Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup up to User record to indicate the Operations Manager-- set by Process Builder &apos;Ops Manager Population onto Work Order&apos; from Opportunity record</description>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look-up field to Opportunity/Job object</description>
        <label>Job Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Phone__c</fullName>
        <label>Other Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Contact__c</fullName>
        <label>Other Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overtime_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overtime Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPE__c</fullName>
        <inlineHelpText>Personal Protective Equipment</inlineHelpText>
        <label>PPE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hard Hat</fullName>
                </value>
                <value>
                    <fullName>Safety Vests</fullName>
                </value>
                <value>
                    <fullName>Safety Glasses</fullName>
                </value>
                <value>
                    <fullName>Ear Protection</fullName>
                </value>
                <value>
                    <fullName>Coveralls</fullName>
                </value>
                <value>
                    <fullName>Facemasks</fullName>
                </value>
                <value>
                    <fullName>Shoe Covers</fullName>
                </value>
                <value>
                    <fullName>Gloves</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Out__c</fullName>
        <label>Pack Out</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Washer/Dryer</fullName>
                </value>
                <value>
                    <fullName>Dishwasher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase_Number__c</fullName>
        <label>Phase Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pick_Up_Check_On_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pick Up Check On Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Water_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power/Water Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Filter__c</fullName>
        <label>Premium Filter - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pressure_Differential__c</fullName>
        <label>Pressure Differential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-0.02</fullName>
                </value>
                <value>
                    <fullName>-0.01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prevailing_Wage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevailing Wage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Contact_Information__c</fullName>
        <label>Project Contact Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <description>Formula field to populate Project Manager from Job record</description>
        <formula>ATI_Job__r.Project_Manager__r.FirstName &amp; &quot; &quot; &amp;  ATI_Job__r.Project_Manager__r.LastName</formula>
        <label>Project Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact__c</fullName>
        <description>Formula field to populate the Project Site Contact Name from the Job record</description>
        <formula>ATI_Job__r.Project_Site_Contact_Name__r.FirstName &amp; &apos; &apos; &amp;  ATI_Job__r.Project_Site_Contact_Name__r.LastName</formula>
        <label>Project Site Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Number_of_Days__c</fullName>
        <label>Projected Number of Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Occupied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the property is currently occupied.</inlineHelpText>
        <label>Property Occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Removal_Height__c</fullName>
        <label>Removal Height</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Man_Hours__c</fullName>
        <label>Removal Man Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>